hphp/hack/test/typecheck/inout/bad_inout_use_arg16.php
<?hh // strict

function f(inout int $i): void {}

function test(ConstMap<string, shape('eggs' => int)> $x): void {
  f(inout $x['foo']['eggs']);
}
